<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>unique_identifier_msgs</name>
  <version>2.2.1</version>
  <description>
    ROS messages for universally unique identifiers.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/unique_identifier_msgs</url>
  <author>Jack O'Quin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>

</package>
